# teleproto3

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.root  OWNERSHIP.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  required-checks-manifest.yml
.github/ISSUE_TEMPLATE/: bug-lib.md  bug-server.md  conformance-report.md  errata.md
.github/actions/identity-audit/: action.yml
.github/workflows/: banner-discipline.yml  bench-release-audit.yml  build-android.yml  build-ios.yml  build-lib.yml  build-server.yml  ci-portability.yml  conformance-harness.yml  conformance-timing.yml  consumer-dispatch.yml  fuzz-nightly.yml  fuzz-pr.yml  identity-audit-pr.yml  lib-windows-probe.yml  spec-lint.yml  telemetry-lint.yml  test.yml  upstream-sync.yml  vectors-detect-drift.yml  verify-required-checks.yml
bench/: Makefile  bench.sh  bench_client.py  report.py  type3_protocol.py
bench/docs/: bench-sandbox-runbook.md
bench/fixtures/: .gitignore  README.md  generate.sh
bench/tests/: bisect_1a9_result.json  test_bench_client.py  test_bench_driver.sh  test_bench_large_payload.sh  test_bench_source_close_flush.sh  test_bisect_1a9.sh  test_csv_format.py  test_fixtures.sh  test_handshake_mock.py  test_report_aggregator.py  test_smoke_harness.sh  test_submode_parser.py
bench/tspu/: machine-profile.md
ci/: build-android-ci.yml  build-android-release.sh  build-android.sh  build-boringssl-ios.sh  build-ios.sh  identity-audit.sh  pre-push-hook.sh  rebase-upstream.sh  rebase.config.android  rebase.config.ios  rebase.config.tdesktop
ci/adversarial-test/: README.md
ci/test-fixtures/: run-all.sh
ci/test-fixtures/fixture-a/: description  expected-stdout-grep  mock-diff.txt  token-list.yaml
ci/test-fixtures/fixture-b/: description  mock-diff.txt
ci/test-fixtures/fixture-c/: description  mock-diff.txt  token-list.yaml
ci/test-fixtures/fixture-d/: description  expected-stdout-grep  token-list.yaml
ci/test-fixtures/fixture-e/: description  expected-stdout-grep
ci/test-fixtures/fixture-f/: description  expected-stdout-grep  mock-commit.txt  mock-diff.txt  token-list.yaml
ci/test-fixtures/fixture-g/: description  (+4 more)
conformance/: LICENSE  README.md  protocol.md  requirements.txt
conformance/baselines/: lib-v0.1.0.yaml  timing-baseline.yaml  timing-threshold.yaml
conformance/gates/: README.md  pilot_sigma.py  timing_invariant.py
conformance/runner/: run.sh  test_runner_contract.sh  verify.py
conformance/vectors/: fragmentation.yaml  kdf-kat.txt  rotation-scenarios.yaml  unit.json
docs/: upstream-rebase.md
lib/: .cppcheck-suppressions  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  VERSION  vcpkg-configuration.json  vcpkg.json
lib/docs/: build-linux.md  build-macos.md  build-windows.md  build.md  consuming-from-c.md  interop-notes.md  performance-budget.md  portability-audit.md  versioning.md
lib/examples/c-client-side/: README.md
lib/examples/c-server-side/: README.md
lib/fuzz/: UPSTREAM_INHERIT.md  analyse.py  check-no-rdtsc.sh  header_fuzz.c  secret_fuzz.c  side_channel.c  side_channel.h
lib/fuzz/corpus/header_byteorder/: flags_1234  flags_5678  flags_80FE
lib/include/: t3.h  t3_client.h  t3_features.h  t3_shim_socks5.h
lib/include/internal/: README.md  retry.h  session.h  t3_csprng.h  t3_platform.h  timing.h
lib/src/: shim_socks5.c  t3_abi_version.c  t3_client_crypto.c  t3_client_crypto.h  t3_client_stream.c  t3_client_ws.c  t3_client_ws.h  t3_http_stream.c  t3_keyderiv.c  t3_obfuscated2.c  t3_padding.c  t3_retry.c  t3_secret.c  t3_session_header.c  t3_strerror.c  t3_timing.c  t3_url_parser.c
lib/src/csprng/: t3_csprng_linux.c  t3_csprng_macos.c  t3_csprng_none.c  t3_csprng_windows.c
lib/tests/: _t3_http_stream_mock.py  socks5_byteshape_test.py  socks5_conformance_stub.c  socks5_conformance_test.py  socks5_faultinjection_test.py
lib/tests/abi/: shim_release_symbols_test.sh  symbol_list.txt  symbol_list_check.sh
lib/tests/csprng/: test_csprng_linux.c  test_csprng_macos.c  test_csprng_windows.c
lib/tests/integration/: test_ac_proto_001.c  test_tgnet_pattern.c
lib/tests/unit/: test_abi_surface.c  test_http_stream.c  test_obfuscated2.c  test_padding.c  test_proxy_protocol.c  test_retry.c  test_secret.c  test_session_header.c  test_t3_client.c  test_timing.c  test_tunnel_sentinel.c  test_type3_dispatch.c  test_type3_stats.c  test_url_parser.c  test_ux_conformance.sh
lib/tests/vectors/: check_kdf_vectors.cmake  linux-reference.sha256  run_kdf_vectors.c
lib/tools/: .gitignore  t3-generate-secret.c
server/: .env.example  .file-limits  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  UPSTREAM.md  VERSION  docker-compose.behind-nginx.yml  mkdocs.yml
server/deploy/: install-on-existing-nginx.sh  nginx-ws-location.conf.template  nginx-ws-map.conf.template  test-tls-setup.sh  tls-setup.sh  verify-nginx.sh
server/docs/: bench-deploy.md  deployment.md  mtproxy3-architecture.md
server/jobs/: .subtree-placeholder
server/mtproto/: mtproto-dc-probes.c  mtproto-dc-probes.h  mtproto-proxy-stats.c
server/net/: net-conn-targets.c  net-connections.h  net-proxy-protocol.c  net-proxy-protocol.h  net-tcp-connections.c  net-tcp-rpc-ext-server.c  net-type3-dispatch.c  net-type3-dispatch.h  net-type3-stats.c  net-type3-stats.h  net-websocket.c  net-websocket.h
server/tests/: dispatch_integration_test.sh  dispatch_test.c  docker-compose.e2e.yml  e2e-smoke.sh  kill_switch_test.sh  probe_drop_test.sh  proxy_protocol_test.sh  rotation_test.sh  stats_endpoint_test.sh  test-installer-script.sh  test_bench_ci_release.sh  test_bench_handler.c  uninstall_test.sh
server/tools/: insertion-revert.sh
spec/: CHANGELOG.md  ERRATA.md  LICENSE  README.md  anti-probe.md  cli-stdout.md  client-tls-fingerprints.md  compliance-levels.md  conformance-procedure.md  glossary.md  handoff-card.md  non-goals.md  qr-sticker.md  recovery-letter.md  secret-format.md  threat-model.md  ux-conformance.md  ux-strings.yaml  wire-format.md
spec/diagrams/: connection-flow.mmd  session-header.mmd  ux-state-machine.mmd  wire-format.mmd
(+87 files in other folders)
